# nisaba

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE.bazel  requirements.in  requirements.txt
nisaba/brahmic/: BUILD.bazel  README.md  __init__.py  brahmic_test.py  char_util.py  constant.bzl  far.cc  far.h  far.py  far_test.cc  far_test.py  fixed.py  fst_properties_test.py  fst_randgen_test.py  grammar.cc  grammar.h  grammar_test.cc  iso.py  nfc.py  rule.py  sigma.py  util.py  util_test.py  visual_norm.py  wellformed.py
nisaba/brahmic/data/: BUILD.bazel
nisaba/brahmic/data/common/: symbol.textproto  symbol.tsv
nisaba/brahmic/testdata/: BUILD.bazel  fixed.tsv  iso.tsv  nfc.tsv  visual_norm.tsv  wellformed.tsv
nisaba/interim/grm2/rewrite/: BUILD.bazel  base_rule_cascade.h  parentheses.h  rewrite.h  rewrite_manager.h  rule_cascade.h
nisaba/interim/grm2/thrax/: BUILD.bazel  abstract-grm-manager.h  grm-manager.h  rewrite-tester-main.cc  rewrite-tester.cc  rewrite-tester.h
nisaba/interim/testing/: BUILD.bazel  build_defs.bzl  test_textproto.cc  testdata.cc  testdata.h  testdata.proto
nisaba/port/: BUILD.bazel  README.md  file.cc  file.h  file_util.cc  file_util.h  file_util_test.cc  integral_types.h  proto_file_stream.cc  proto_file_stream.h  status-matchers.h  status_macros.h  test_utils.cc  test_utils.h  thread_pool.h  thread_pool_test.cc  timer.h  timer_test.cc  unicode_properties.cc  unicode_properties.h  utf8_delimiters.cc  utf8_delimiters.h  utf8_delimiters_test.cc  utf8_util.cc  utf8_util.h  utf8_util_test.cc
nisaba/scripts/brahmic/: BUILD.bazel  README.md  __init__.py  benchmark_test.cc  brahmic_test.py  char_util.py  components_tsv.bzl  constant.bzl  far.cc  far.h  far_test.cc  fixed.py  fst_properties_test.py  fst_randgen_test.py  grammar.cc  grammar.h  grammar_test.cc  iso.py  mappings.md  nfc.py  randgen_test.py  reading_norm.py  script_config.proto  sigma.py  util.py  util_test.py  visual_norm.py  wellformed.py
nisaba/scripts/brahmic/data/: BUILD.bazel  README.md  coda.textproto  components_tsv.bzl  consonant.textproto  inherent_vowel.textproto  preserve.textproto  standalone.textproto  symbol.textproto  virama.textproto  vowel.textproto  vowel_sign.textproto
nisaba/scripts/brahmic/natural_translit/: BUILD.bazel  README.md  constants.py  grapheme_inventory.py  hi_e2e.py  hi_e2e_test.py  iso2ltn_ops.py  iso2ltn_ops_test.py  iso2txn.py  iso2txn_ops.py  iso2txn_ops_test.py  iso2txn_test.py  iso2typ.py  iso2typ_test.py  iso_inventory.py  kn_e2e.py  kn_e2e_test.py  ml_e2e.py  ml_e2e_test.py  phon_ops.py  phon_ops_test.py  phoneme_inventory.py  rewrite_functions.py  te_e2e.py  te_e2e_test.py  transliteration_inventory.py  txn2ipa.py  txn2ipa_test.py  txn2ltn.py  txn2nat.py  txn2nat_test.py  typ2txn.py  typ2txn_test.py  util.py
nisaba/scripts/brahmic/testdata/: BUILD.bazel  fixed.textproto  fixed.tsv  iso.textproto  iso.tsv  nfc.textproto  nfc.tsv  reading_norm.textproto  reading_norm.tsv  visual_norm.textproto  visual_norm.tsv  wellformed.textproto  wellformed.tsv
nisaba/scripts/natural_translit/brahmic/: BUILD.bazel  README.md  acronym.py  derom_inventory.py  derom_inventory_test.py  deromanizer.py  deromanizer_test.py  en_spellout.py  en_spellout_test.py  g2p.py  g2p_test.py  grapheme_inventory.py  grapheme_inventory_test.py  hi_params.py  iso2ltn_ops.py  iso2ltn_ops_test.py  iso2txn.py  iso2txn_ops.py  iso2txn_ops_test.py  iso2txn_test.py  iso2typ.py  iso2typ_test.py  iso_inventory.py  iso_inventory_test.py  phoneme_inventory.py  psa_phoneme_inventory.py  romanizer.py  romanizer_test.py  ta_params.py
nisaba/scripts/natural_translit/common/: BUILD.bazel  list_util.py  rewrite_functions.py  util.py
nisaba/scripts/natural_translit/deromanization/: BUILD.bazel  en_spellout.py  en_spellout_bn_beng.py  en_spellout_gu_gujr.py  en_spellout_hi_deva.py  en_spellout_kn_knda.py  en_spellout_ml_mlym.py  en_spellout_mr_deva.py  en_spellout_or_orya.py  en_spellout_pa_guru.py  en_spellout_sd_arab.py  en_spellout_si_sinh.py  en_spellout_ta_taml.py  en_spellout_te_telu.py  en_spellout_ur_arab.py  hi_deva.py  hi_iso.py  hi_joint.py  ta_iso.py  ta_joint.py  ta_taml.py
nisaba/scripts/natural_translit/features/: BUILD.bazel  feature2.py  feature2_test.py  (+6 more)
nisaba/scripts/utils/: BUILD.bazel  char.py  far.py  far_base.cc  far_base.h  far_test.py  file.py  func.py  func_test.py  grammars.bzl  letter_languages.bzl  letter_languages.proto  letter_languages.py  letter_languages_integrity_test.py  proto.py  rewrite.py  rule.py  test_util.py  unicode_strings.proto  unicode_strings_to_tsv.bzl  unicode_strings_to_tsv.py  unicode_strings_util.py  unicode_strings_util_test.py
nisaba/translit/fst/: BUILD.bazel  pairlm_decoder.cc  pairlm_decoder.h  pairlm_decoder_main.cc  pairlm_decoder_options.proto  pairlm_decoder_runner.cc  pairlm_decoder_runner.h  pairlm_decoder_runner_test.cc  pairlm_decoder_test.cc  wordpiece-segmenter.cc  wordpiece-segmenter.h  wordpiece-segmenter_test.cc
nisaba/translit/tools/: BUILD.bazel  calculate_emd_cer.py  calculate_error_rate.cc  calculate_error_rate.h  calculate_error_rate_main.cc  calculate_error_rate_test.cc  emd_cer.py  emd_cer_test.py  emd_tsv_to_json_test.cc  ensemble-full-string_main.cc  extract-kbest-full-string_main.cc  kbest-full-string-util.cc  kbest-full-string-util.h  kbest-full-string-util_test.cc  rejoin-kbest-full-string_main.cc
nisaba/utils/: BUILD.bazel  char.py  far.py  far_test.py  file.py  func.py  func_test.py  grammars.bzl  rewrite.py  rule.py  test_util.py  unicode_strings.proto  unicode_strings_to_tsv.bzl  unicode_strings_to_tsv.py  unicode_strings_to_tsv_test.py  unicode_strings_util.py  unicode_strings_util_test.py  util.cc  util.h
nisaba/utils/testdata/: BUILD.bazel  brahmi_data.textproto
scripts/perso_arabic/: BUILD.bazel  README.md  __init__.py  api_test.py  fst_properties_test.py  nfc.py  randgen_test.py  reversible_roman.py  reversible_roman_coverage_test.py  util.py  visual_norm.py
scripts/perso_arabic/data/: README.md
scripts/perso_arabic/testdata/: BUILD.bazel  nfc.tsv  reversible_roman.tsv  visual_norm.tsv
(+963 files in other folders)
