# Copyright 2023 Nisaba Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Bazel (http://bazel.io/) workspace file.
#
# Where the SHA-256 checksums are needed, these can be generated using the
# `sha256sum` tool on Unix platforms (found as part of `coreutils` package
# in most Linux distributions).

workspace(name = "com_google_nisaba")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# -------------------------------------------------------------------------
# Google protocol buffers. See
#    https://github.com/protocolbuffers/protobuf
# -------------------------------------------------------------------------

# TODO: Version `21.12` is the last released version that works with
# `py_proto_library`. The latest current `22.3` is broken. Unfortunately, this
# version does not support absl::Cord for ZeroOutputStream.
#
# On the hack below see https://github.com/protocolbuffers/protobuf/issues/12523.

protobuf_commit = "bc127f2b5605e5454d1c15d3325ecdd5ceaad6cf"

http_archive(
    name = "com_google_protobuf",
    strip_prefix = "protobuf-%s" % protobuf_commit,
    patches = ["//:bazel/protobuf.patch"],
    urls = ["https://github.com/protocolbuffers/protobuf/archive/%s.tar.gz" %
            protobuf_commit],
)

# Import external protobuf dependencies into this workspace.
load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")
protobuf_deps()

# -------------------------------------------------------------------------
# Google testing framework. See
#    https://github.com/google/googletest
# -------------------------------------------------------------------------

http_archive(
    name = "com_google_googletest",
    strip_prefix = "googletest-main",
    urls = ["https://github.com/google/googletest/archive/main.zip"],
)

# -------------------------------------------------------------------------
# Google foundation C++ classes. See
#    https://github.com/abseil/abseil-cpp
# -------------------------------------------------------------------------

http_archive(
    name = "com_google_absl",
    strip_prefix = "abseil-cpp-master",
    urls = ["https://github.com/abseil/abseil-cpp/archive/master.zip"],
)

# -------------------------------------------------------------------------
# Thrax: This repo is only used to retrieve some of the build rules for
# grammar manipulation. See
#    http://www.opengrm.org/twiki/bin/view/GRM/Thrax
# -------------------------------------------------------------------------
thrax_version = "1.3.7-rc2"

http_archive(
    name = "org_opengrm_thrax",
    urls = ["https://github.com/agutkin/finite_state/raw/main/thrax-%s.tar.gz" % thrax_version],
    sha256 = "8d94cb30bd99e78930786af7953762eba024e29d77e9b37b451ccafbf826a16a",
    strip_prefix = "thrax-%s" % thrax_version,
)

# -------------------------------------------------------------------------
# Pynini: See
#    http://www.opengrm.org/twiki/bin/view/GRM/Pynini
# -------------------------------------------------------------------------
pynini_version = "2.1.5-rc2"

http_archive(
    name = "org_opengrm_pynini",
    urls = ["https://github.com/agutkin/finite_state/raw/main/pynini-%s.tar.gz" % pynini_version],
    sha256 = "22f0f88ed9936a7690335cad90d10cc5e408602100cc43e7df7c5d2f1e610064",
    strip_prefix = "pynini-%s" % pynini_version
)

load("@org_opengrm_pynini//bazel:workspace.bzl", "pynini_repositories")

pynini_repositories()

# -------------------------------------------------------------------------
# External Python packages.
# -------------------------------------------------------------------------

http_archive(
    name = "rules_python",
    sha256 = "94750828b18044533e98a129003b6a68001204038dc4749f40b195b24c38f49f",
    strip_prefix = "rules_python-0.21.0",
    url = "https://github.com/bazelbuild/rules_python/archive/refs/tags/0.21.0.tar.gz",
)

# Python external packages installation.
load("@rules_python//python:pip.bzl", "pip_parse")

pip_parse(
    name = "pip_deps",
    requirements_lock = "//:requirements.txt", # Top level requirements.
)

load("@pip_deps//:requirements.bzl", "install_deps")

install_deps()

# -------------------------------------------------------------------------
# Rules for generating C++ code from Protocol Buffers.
# -------------------------------------------------------------------------

http_archive(
    name = "rules_cc",
    sha256 = "35f2fb4ea0b3e61ad64a369de284e4fbbdcdba71836a5555abb5e194cf119509",
    strip_prefix = "rules_cc-624b5d59dfb45672d4239422fa1e3de1822ee110",
    urls = ["https://github.com/bazelbuild/rules_cc/archive/624b5d59dfb45672d4239422fa1e3de1822ee110.tar.gz"],
)

load("@rules_cc//cc:repositories.bzl", "rules_cc_dependencies")
rules_cc_dependencies()

# -------------------------------------------------------------------------
# Public dependencies that need to be exposed for the downstream projects.
# -------------------------------------------------------------------------

load("@//bazel:workspace.bzl", "nisaba_public_repositories")
nisaba_public_repositories()
