# Copyright 2023 Nisaba Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Bazel (http://bazel.io/) workspace file.
#
# Where the SHA-256 checksums are needed, these can be generated using the
# `sha256sum` tool on Unix platforms (found as part of `coreutils` package
# in most Linux distributions).

workspace(name = "com_google_nisaba")

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# -------------------------------------------------------------------------
# Google protocol buffers. See
#    https://github.com/protocolbuffers/protobuf
# -------------------------------------------------------------------------

git_repository(
    name = "com_google_protobuf",
    remote = "https://github.com/protocolbuffers/protobuf.git",
    tag = "v4.24.3",
)

# Import external protobuf dependencies into this workspace.
load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")
protobuf_deps()

# -------------------------------------------------------------------------
# Python rules.
# -------------------------------------------------------------------------

http_archive(
    name = "rules_python",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.25.0/rules_python-0.25.0.tar.gz",
    sha256 = "5868e73107a8e85d8f323806e60cad7283f34b32163ea6ff1020cf27abef6036",
    strip_prefix = "rules_python-0.25.0",
)

load("@rules_python//python:repositories.bzl", "py_repositories")
py_repositories()

# -------------------------------------------------------------------------
# Google testing framework. See
#    https://github.com/google/googletest
# -------------------------------------------------------------------------

http_archive(
    name = "com_google_googletest",
    strip_prefix = "googletest-main",
    urls = ["https://github.com/google/googletest/archive/main.zip"],
)

# -------------------------------------------------------------------------
# Thrax: This repo is only used to retrieve some of the build rules for
# grammar manipulation. See
#    http://www.opengrm.org/twiki/bin/view/GRM/Thrax
# -------------------------------------------------------------------------
thrax_version = "1.3.7-rc2"

http_archive(
    name = "org_opengrm_thrax",
    urls = ["https://github.com/agutkin/finite_state/raw/main/thrax-%s.tar.gz" % thrax_version],
    sha256 = "8d94cb30bd99e78930786af7953762eba024e29d77e9b37b451ccafbf826a16a",
    strip_prefix = "thrax-%s" % thrax_version,
)

# -------------------------------------------------------------------------
# Pynini: See
#    http://www.opengrm.org/twiki/bin/view/GRM/Pynini
# -------------------------------------------------------------------------
pynini_version = "2.1.5-rc2"

http_archive(
    name = "org_opengrm_pynini",
    urls = ["https://github.com/agutkin/finite_state/raw/main/pynini-%s.tar.gz" % pynini_version],
    sha256 = "22f0f88ed9936a7690335cad90d10cc5e408602100cc43e7df7c5d2f1e610064",
    strip_prefix = "pynini-%s" % pynini_version
)

load("@org_opengrm_pynini//bazel:workspace.bzl", "pynini_repositories")

pynini_repositories()

# -------------------------------------------------------------------------
# External Python packages.
# -------------------------------------------------------------------------

# Python external packages installation.
load("@rules_python//python:pip.bzl", "pip_parse")

pip_parse(
    name = "pip_deps",
    requirements_lock = "//:requirements.txt", # Top level requirements.
)

load("@pip_deps//:requirements.bzl", "install_deps")

install_deps()

# -------------------------------------------------------------------------
# Rules for generating C++ code from Protocol Buffers.
# -------------------------------------------------------------------------

http_archive(
    name = "rules_cc",
    urls = ["https://github.com/bazelbuild/rules_cc/releases/download/0.0.9/rules_cc-0.0.9.tar.gz"],
    sha256 = "2037875b9a4456dce4a79d112a8ae885bbc4aad968e6587dca6e64f3a0900cdf",
    strip_prefix = "rules_cc-0.0.9",
)

load("@rules_cc//cc:repositories.bzl", "rules_cc_dependencies")
rules_cc_dependencies()

# -------------------------------------------------------------------------
# Public dependencies that need to be exposed for the downstream projects.
# -------------------------------------------------------------------------

load("@//bazel:workspace.bzl", "nisaba_public_repositories")
nisaba_public_repositories()
